# cpp-project-template

./: CMakeLists.txt  LICENSE.md  README.md  conanfile.txt
.github/workflows/: cmake.yml
src/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt  dummy.cpp
src/lib/include/cpp-project-template/: cpp-project-template.h  logging.h
test/: CMakeLists.txt  test_cpp-project-template.cpp
